// Copyright 2018 the orbs-network-typescript authors
// This file is part of the orbs-network-typescript library in the Orbs project.
//
// This source code is licensed under the MIT license found in the LICENSE file in the root directory of this source tree.
// The above notice should be included in all copies or substantial portions of the software.

syntax = "proto3";

import "primitives/transactions.proto";
import "primitives/blocks.proto";
import "call-contract.proto";

service VirtualMachine {
  rpc CallContract (CallContractInput) returns (CallContractOutput);
  rpc ProcessTransactionSet(ProcessTransactionSetInput) returns (ProcessTransactionSetOutput);
}

message ProcessTransactionSetInput {
  repeated TransactionEntry orderedTransactions = 1;
}

message ProcessTransactionSetOutput {
  repeated TransactionReceipt transactionReceipts = 1;
  repeated ModifiedStateKey stateDiff = 2;
}
